--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,55 @@
 {
-    "discord.enabled": true,
-    "workbench.editor.enablePreview": false,
-    "files.associations": {
-        "cstdio": "cpp"
-    },
+	// Code settings
+	"editor.fontFamily": "SF Mono",
+	"editor.fontSize": 15,
+	"editor.fontWeight": "500",
+	"editor.fontLigatures": true,
+	"editor.lineHeight": 35,
+	"editor.tabSize": 2,
+	//"editor.lineNumbers": "off",
+	"editor.renderIndentGuides": false,
+	"editor.renderWhitespace": "none",
+	"breadcrumbs.enabled": false,
+	"editor.renderControlCharacters": false,
+	"editor.minimap.enabled": false,
+	// Mouse related settings
+	"editor.smoothScrolling": true,
+	"editor.mouseWheelScrollSensitivity": 2,
+	"editor.scrollBeyondLastLine": true,
+	"editor.cursorStyle": "block",
+	"editor.cursorBlinking": "phase",
+	"editor.cursorSmoothCaretAnimation": true,
+	"editor.cursorWidth": 2,
+	// Explorer settings
+	"explorer.openEditors.visible": 0,
+	"explorer.confirmDelete": false,
+	"explorer.decorations.badges": false,
+	"problems.decorations.enabled": false,
+	"workbench.sideBar.location": "left",
+	// UI Settings
+	"window.zoomLevel": 0,
+	"window.menuBarVisibility": "toggle",
+	"workbench.statusBar.visible": false,
+	"workbench.activityBar.visible": true,
+	// Terminal
+	"terminal.integrated.fontFamily": "SF Mono",
+	"terminal.integrated.cursorStyle": "block",
+	"terminal.integrated.cursorBlinking": true,
+	"terminal.integrated.fontWeight": "500",
+	"code-runner.runInTerminal": true,
+	"editor.formatOnSave": true,
+	"workbench.startupEditor": "none",
+	"editor.detectIndentation": true,
+	"editor.insertSpaces": false,
+	"terminal.integrated.rendererType": "dom",
+	"files.autoSave": "onWindowChange",
+	"window.compositionAttribute": "acrylic",
+	"workbench.iconTheme": "vscode-seedling-icon-theme",
+	"workbench.colorTheme": "Atom One Dark",
+	"discord.enabled": true,
+	"workbench.editor.enablePreview": false,
+	"files.associations": {
+		"cstdio": "cpp",
+		"ostream": "cpp"
+	}
 }
