--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,7 +29,7 @@
 	// UI Settings
 	"window.zoomLevel": 0,
 	"window.menuBarVisibility": "toggle",
-	"workbench.statusBar.visible": false,
+	"workbench.statusBar.visible": true,
 	"workbench.activityBar.visible": true,
 	// Terminal
 	"terminal.integrated.fontFamily": "SF Mono",
