Welcome 2 2 semester lol

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,27 +14,25 @@
                 ".\\.exe"
             ]
         },
-        //C++ 컴파일
         {
             "label": "save and compile for C++",
-            "command": "gcc",
+            "command": "g++",
             "args": [
-                "${file}",
                 "-g",
+                "${file}",
                 "-o",
-                "${fileDirname}\\.exe/${fileBasenameNoExtension}"
+                "${fileDirname}\\.exe\\${fileBasenameNoExtension}"
             ],
-            "group": "build",
-            //컴파일시 에러를 편집기에 반영
-            //참고:   https://code.visualstudio.com/docs/editor/tasks#_defining-a-problem-matcher
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
             "problemMatcher": {
                 "fileLocation": [
                     "relative",
                     "${workspaceRoot}"
                 ],
                 "pattern": {
-                    // The regular expression. 
-                    //Example to match: helloWorld.c:5:3: warning: implicit declaration of function 'prinft'
                     "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning error):\\s+(.*)$",
                     "file": 1,
                     "line": 2,
@@ -44,7 +42,6 @@
                 }
             }
         },
-        //C 컴파일
         {
             "label": "save and compile for C",
             "command": "gcc",
@@ -55,16 +52,12 @@
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
             "group": "build",
-            //컴파일시 에러를 편집기에 반영
-            //참고:   https://code.visualstudio.com/docs/editor/tasks#_defining-a-problem-matcher
             "problemMatcher": {
                 "fileLocation": [
                     "relative",
                     "${workspaceRoot}"
                 ],
                 "pattern": {
-                    // The regular expression. 
-                    //Example to match: helloWorld.c:5:3: warning: implicit declaration of function 'prinft'
                     "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning error):\\s+(.*)$",
                     "file": 1,
                     "line": 2,
@@ -74,13 +67,6 @@
                 }
             }
         },
-        // 바이너리 실행(Ubuntu)
-        // {
-        //     "label": "execute",
-        //     "command": "${fileDirname}/${fileBasenameNoExtension}",
-        //     "group": "test"
-        // }
-        // 바이너리 실행(Windows)
         {
             "label": "execute",
             "command": "cmd",
