--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,7 +72,9 @@
 		"unordered_map": "cpp",
 		"string_view": "cpp",
 		"initializer_list": "cpp",
-		"ranges": "cpp"
+		"ranges": "cpp",
+		"optional": "cpp",
+		"numeric": "cpp"
 	},
 	"cmake.configureOnOpen": false,
 	"C_Cpp.intelliSenseEngine": "Tag Parser"
