--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,7 @@
 		"string": "cpp",
 		"unistd.h": "c",
 		"exception": "cpp",
+		"*.c": "c",
 		"*.cpp": "cpp",
 		"vector": "cpp",
 		"array": "cpp",
@@ -77,7 +78,8 @@
 		"ranges": "cpp",
 		"optional": "cpp",
 		"numeric": "cpp",
-		"stack": "cpp"
+		"stack": "cpp",
+		"queue": "cpp"
 	},
 	"cmake.configureOnOpen": false
 }
