--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,85 +1,85 @@
 {
-	// Code settings
-	"editor.fontFamily": "SF Mono, AppleSDGothicNeoM00",
-	"editor.fontWeight": "500",
-	"editor.fontLigatures": true,
-	"editor.lineHeight": 35,
-	"editor.tabSize": 2,
-	//"editor.lineNumbers": "off",
-	"editor.renderIndentGuides": false,
-	"editor.renderWhitespace": "none",
-	"breadcrumbs.enabled": true,
-	"editor.renderControlCharacters": false,
-	"editor.minimap.enabled": true,
-	// Mouse related settings
-	"editor.smoothScrolling": true,
-	"editor.mouseWheelScrollSensitivity": 2,
-	"editor.scrollBeyondLastLine": true,
-	"editor.cursorStyle": "block",
-	"editor.cursorBlinking": "phase",
-	"editor.cursorSmoothCaretAnimation": true,
-	"editor.cursorWidth": 2,
-	// Explorer settings
-	"explorer.openEditors.visible": 0,
-	"explorer.confirmDelete": false,
-	"explorer.decorations.badges": false,
-	"problems.decorations.enabled": false,
-	"workbench.sideBar.location": "left",
-	// UI Settings
-	"window.zoomLevel": 0,
-	"window.menuBarVisibility": "toggle",
-	"workbench.statusBar.visible": true,
-	"workbench.activityBar.visible": true,
-	// Terminal
-	"terminal.integrated.fontFamily": "SF Mono, AppleSDGothicNeoM00",
-	"terminal.integrated.cursorStyle": "block",
-	"terminal.integrated.cursorBlinking": true,
-	"terminal.integrated.fontWeight": "500",
-	"code-runner.runInTerminal": true,
-	"editor.formatOnSave": true,
-	"workbench.startupEditor": "none",
-	"editor.detectIndentation": true,
-	"editor.insertSpaces": false,
-	"terminal.integrated.rendererType": "dom",
-	"files.autoSave": "onWindowChange",
-	"window.compositionAttribute": "acrylic",
-	"workbench.iconTheme": "material-icon-theme",
-	"workbench.colorTheme": "Atom One Dark",
-	"discord.enabled": true,
-	"workbench.editor.enablePreview": false,
-	"files.associations": {
-		"cstdio": "cpp",
-		"ostream": "cpp",
-		"type_traits": "c",
-		"cstdlib": "cpp",
-		"algorithm": "cpp",
-		"cmath": "c",
-		"*.tcc": "c",
-		"iostream": "cpp",
-		"istream": "cpp",
-		"ios": "cpp",
-		"iosfwd": "cpp",
-		"streambuf": "cpp",
-		"cwchar": "cpp",
-		"list": "cpp",
-		"functional": "c",
-		"random": "c",
-		"string": "cpp",
-		"unistd.h": "c",
-		"exception": "cpp",
-		"*.c": "c",
-		"*.cpp": "cpp",
-		"vector": "cpp",
-		"array": "cpp",
-		"deque": "cpp",
-		"unordered_map": "cpp",
-		"string_view": "cpp",
-		"initializer_list": "cpp",
-		"ranges": "cpp",
-		"optional": "cpp",
-		"numeric": "cpp",
-		"stack": "cpp",
-		"queue": "cpp"
-	},
-	"cmake.configureOnOpen": false
+  // Code settings
+  "editor.fontFamily": "SF Mono, AppleSDGothicNeoM00",
+  "editor.fontWeight": "500",
+  "editor.fontLigatures": true,
+  "editor.lineHeight": 35,
+  "editor.tabSize": 2,
+  //"editor.lineNumbers": "off",
+  "editor.renderIndentGuides": false,
+  "editor.renderWhitespace": "none",
+  "breadcrumbs.enabled": true,
+  "editor.renderControlCharacters": false,
+  "editor.minimap.enabled": true,
+  // Mouse related settings
+  "editor.smoothScrolling": true,
+  "editor.mouseWheelScrollSensitivity": 2,
+  "editor.scrollBeyondLastLine": true,
+  "editor.cursorStyle": "block",
+  "editor.cursorBlinking": "phase",
+  "editor.cursorSmoothCaretAnimation": true,
+  "editor.cursorWidth": 2,
+  // Explorer settings
+  "explorer.openEditors.visible": 0,
+  "explorer.confirmDelete": false,
+  "explorer.decorations.badges": false,
+  "problems.decorations.enabled": false,
+  "workbench.sideBar.location": "left",
+  // UI Settings
+  "window.zoomLevel": 0,
+  "window.menuBarVisibility": "toggle",
+  "workbench.statusBar.visible": true,
+  "workbench.activityBar.visible": true,
+  // Terminal
+  "terminal.integrated.fontFamily": "SF Mono, AppleSDGothicNeoM00",
+  "terminal.integrated.cursorStyle": "block",
+  "terminal.integrated.cursorBlinking": true,
+  "terminal.integrated.fontWeight": "500",
+  "code-runner.runInTerminal": true,
+  "editor.formatOnSave": true,
+  "workbench.startupEditor": "none",
+  "editor.detectIndentation": true,
+  "editor.insertSpaces": false,
+  "terminal.integrated.rendererType": "dom",
+  "window.compositionAttribute": "acrylic",
+  "workbench.iconTheme": "material-icon-theme",
+  "workbench.colorTheme": "Atom One Dark",
+  "discord.enabled": true,
+  "workbench.editor.enablePreview": false,
+  "files.associations": {
+    "cstdio": "cpp",
+    "ostream": "cpp",
+    "type_traits": "c",
+    "cstdlib": "cpp",
+    "algorithm": "cpp",
+    "cmath": "c",
+    "*.tcc": "c",
+    "iostream": "cpp",
+    "istream": "cpp",
+    "ios": "cpp",
+    "iosfwd": "cpp",
+    "streambuf": "cpp",
+    "cwchar": "cpp",
+    "list": "cpp",
+    "functional": "c",
+    "random": "c",
+    "string": "cpp",
+    "unistd.h": "c",
+    "exception": "cpp",
+    "*.c": "c",
+    "*.cpp": "cpp",
+    "vector": "cpp",
+    "array": "cpp",
+    "deque": "cpp",
+    "unordered_map": "cpp",
+    "string_view": "cpp",
+    "initializer_list": "cpp",
+    "ranges": "cpp",
+    "optional": "cpp",
+    "numeric": "cpp",
+    "stack": "cpp",
+    "queue": "cpp"
+  },
+  "cmake.configureOnOpen": false,
+  "files.autoSave": "onFocusChange"
 }
