--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,5 +81,6 @@
     "queue": "cpp"
   },
   "cmake.configureOnOpen": false,
-  "files.autoSave": "onFocusChange"
+  "files.autoSave": "onFocusChange",
+  "C_Cpp.errorSquiggles": "Enabled"
 }
