--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,6 @@
   "editor.fontLigatures": true,
   "editor.lineHeight": 35,
   "editor.tabSize": 2,
-  //"editor.lineNumbers": "off",
-  "editor.renderIndentGuides": false,
   "editor.renderWhitespace": "none",
   "breadcrumbs.enabled": true,
   "editor.renderControlCharacters": false,
@@ -82,5 +80,6 @@
   },
   "cmake.configureOnOpen": false,
   "files.autoSave": "onFocusChange",
-  "C_Cpp.errorSquiggles": "Enabled"
+  "C_Cpp.errorSquiggles": "Enabled",
+  "editor.guides.indentation": false
 }
