--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,7 @@
   "editor.scrollBeyondLastLine": true,
   "editor.cursorStyle": "block",
   "editor.cursorBlinking": "phase",
-  "editor.cursorSmoothCaretAnimation": true,
+  "editor.cursorSmoothCaretAnimation": "on",
   "editor.cursorWidth": 2,
   // Explorer settings
   "explorer.openEditors.visible": 0,
@@ -29,7 +29,7 @@
   "workbench.statusBar.visible": true,
   "workbench.activityBar.visible": true,
   // Terminal
-  "terminal.integrated.fontFamily": "SF Mono, AppleSDGothicNeoM00",
+  "terminal.integrated.fontFamily": "monospace",
   "terminal.integrated.cursorStyle": "block",
   "terminal.integrated.cursorBlinking": true,
   "terminal.integrated.fontWeight": "500",
